@@ -4,7 +4,7 @@
 
   <groupId>nl.vpro.shared</groupId>
   <artifactId>vpro-shared-parent</artifactId>
-  <version>4.4-SNAPSHOT</version>
+  <version>5.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>vpro-shared-parent</name>
@@ -17,14 +17,14 @@
     <skipITs>true</skipITs>
     <java.version>17</java.version>
 
-    <spring.version>5.3.31</spring.version>
-    <spring-security.version>5.8.9</spring-security.version>
+    <spring.version>6.1.3</spring.version>
+    <spring-security.version>6.2.1</spring-security.version>
     <jackson2.version>2.16.1</jackson2.version>
 
     <junit.version>5.10.1</junit.version>
     <mockito.version>5.10.0</mockito.version>
-    <assertj.version>3.24.2</assertj.version>
-    <resteasy.version>5.0.9.Final</resteasy.version>
+    <assertj.version>3.25.2</assertj.version>
+    <resteasy.version>6.2.7.Final</resteasy.version>
     <bytebuddy.version>1.14.11</bytebuddy.version>
     <slf4j.version>2.0.11</slf4j.version>
     <log4j2.version>2.22.1</log4j2.version>
@@ -39,18 +39,17 @@
     <httpcomponentscore.version>4.4.16</httpcomponentscore.version>
 
     <hibernate.version>5.6.15.Final</hibernate.version>
-    <hibernate.search.version>5.11.12.Final</hibernate.search.version>
 
     <hibernate.search6.version>6.2.3.Final</hibernate.search6.version>
 
     <!-- jakarta versions -->
-    <servlet.api.version>4.0.4</servlet.api.version>
-    <validation.api.version>2.0.2</validation.api.version>
-    <persistence.api.version>2.2.3</persistence.api.version>
-    <annotation.api.version>1.3.5</annotation.api.version>
-    <xml-bind.api.version>2.3.3</xml-bind.api.version>
+    <servlet.api.version>6.0.0</servlet.api.version>
+    <validation.api.version>3.0.2</validation.api.version>
+    <persistence.api.version>3.1.0</persistence.api.version>
+    <annotation.api.version>2.1.1</annotation.api.version>
+    <xml-bind.api.version>4.0.1</xml-bind.api.version>
 
-    <hibernate.validator.version>6.2.5.Final</hibernate.validator.version>
+    <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
     <camel.version>3.20.9</camel.version>
 
     <swagger.version>2.2.20</swagger.version>
@@ -66,8 +65,11 @@
     <lucene.elasticsearch7.version>8.8.2</lucene.elasticsearch7.version>
 
     <micrometer.version>1.12.2</micrometer.version>
-    <flyway.version>10.6.0</flyway.version>
+    <flyway.version>10.7.1</flyway.version>
 
+
+    <EXTRA_TEST_OPTS>--add-opens java.base/java.lang=ALL-UNNAMED</EXTRA_TEST_OPTS>
+    <vpro.shared.module.postfix>OVERRIDE</vpro.shared.module.postfix>
   </properties>
 
   <licenses>
@@ -119,10 +121,11 @@
     <module>vpro-shared-elasticsearch-high-level-client</module>
 
     <module>vpro-shared-hibernate</module>
-    <module>vpro-shared-hibernate-search</module>
     <!--
-        <module>vpro-shared-hibernate-search6</module>
+    <module>vpro-shared-hibernate-search</module>
     -->
+    <module>vpro-shared-hibernate-search6</module>
+
     <module>vpro-shared-jackson2</module>
     <module>vpro-shared-logging</module>
     <module>vpro-shared-log4j2</module>
@@ -226,6 +229,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
+          <argLine>${EXTRA_TEST_OPTS}</argLine>
           <systemPropertyVariables>
             <projectArtifactId>${project.artifactId}</projectArtifactId>
           </systemPropertyVariables>
@@ -292,16 +296,16 @@
             </annotationProcessorPaths>
           </configuration>
         </plugin>
-      <!--  <plugin>
+        <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <configuration>
             <archive>
               <manifestEntries>
-                <Automatic-Module-Name>${project.groupId}.${project.artifactId}</Automatic-Module-Name>
+                <Automatic-Module-Name>nl.vpro.shared.${vpro.shared.module.postfix}</Automatic-Module-Name>
               </manifestEntries>
             </archive>
           </configuration>
-        </plugin>-->
+        </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>buildnumber-maven-plugin</artifactId>
@@ -369,7 +373,7 @@
       </dependency>
       <dependency>
         <groupId>nl.vpro.shared</groupId>
-        <artifactId>vpro-shared-hibernate-search</artifactId>
+        <artifactId>vpro-shared-hibernate-search6</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -445,17 +449,17 @@
       </dependency>
       <dependency>
         <groupId>io.swagger.core.v3</groupId>
-        <artifactId>swagger-annotations</artifactId>
+        <artifactId>swagger-annotations-jakarta</artifactId>
         <version>${swagger.version}</version>
       </dependency>
       <dependency>
         <groupId>io.swagger.core.v3</groupId>
-        <artifactId>swagger-jaxrs2</artifactId>
+        <artifactId>swagger-jaxrs2-jakarta</artifactId>
         <version>${swagger.version}</version>
       </dependency>
       <dependency>
         <groupId>io.swagger.core.v3</groupId>
-        <artifactId>swagger-core</artifactId>
+        <artifactId>swagger-core-jakarta</artifactId>
          <version>${swagger.version}</version>
       </dependency>
       <dependency>
@@ -480,14 +484,8 @@
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-core</artifactId>
+        <artifactId>hibernate-core-jakarta</artifactId>
         <version>${hibernate.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
@@ -495,14 +493,9 @@
         <version>${hibernate.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-        <version>${hibernate.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-search-orm</artifactId>
-        <version>${hibernate.search.version}</version>
+        <groupId>org.hibernate.search</groupId>
+        <artifactId>hibernate-search-mapper-orm-jakarta</artifactId>
+        <version>${hibernate.search6.version}</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate.search</groupId>
@@ -537,7 +530,7 @@
       <dependency>
         <groupId>jakarta.ws.rs</groupId>
         <artifactId>jakarta.ws.rs-api</artifactId>
-        <version>2.1.6</version>
+        <version>3.1.0</version>
         <scope>provided</scope>
       </dependency>
 
@@ -803,7 +796,7 @@
       <dependency>
         <groupId>org.meeuw.i18n</groupId>
         <artifactId>i18n-regions-bom</artifactId>
-        <version>1.7.0</version>
+        <version>2.1-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -828,7 +821,7 @@
       <dependency>
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>jaxb-runtime</artifactId>
-        <version>2.3.9</version>
+        <version>4.0.4</version>
       </dependency>
       <dependency>
         <groupId>info.picocli</groupId>
